--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.22.1",
     "gh-pages": "^3.2.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-date-range": "^1.2.0",
     "react-dom": "^17.0.2",
