--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@devexpress/dx-react-scheduler": "^2.7.5",
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.5",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,6 +15,7 @@
     "date-fns": "^2.22.1",
     "gh-pages": "^3.2.0",
     "lodash": "^4.17.21",
+    "nusmoderator": "^3.0.0",
     "react": "^17.0.2",
     "react-date-range": "^1.2.0",
     "react-dom": "^17.0.2",
