--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-telegram-login": "^1.1.2",
+    "telegraf": "^4.4.0",
     "victory": "^35.8.5",
     "web-vitals": "^1.0.1"
   },
